stop jumping about

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -4,6 +4,7 @@ html {
   font-size: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+    overflow:scroll;
 }
 html,
 button,
